@@ -88,6 +88,7 @@ const QColor DrawConfig::DEBUG_POINTTO_COLOR = QColor( 127, 127, 127 );
 const QColor DrawConfig::DEBUG_TARGET_COLOR = QColor( 255, 127, 0 );
 const QColor DrawConfig::DEBUG_LOG_MESSAGE_FONT_COLOR = QColor( 0, 0, 0 );
 const QColor DrawConfig::DEBUG_SHAPE_COLOR = QColor( 255, 127, 0 );
+const QColor DrawConfig::DEBUG_ACTION_SEQUENCE_COLOR = QColor( 255, 255, 0 ); //QColor( 180, 0, 255 );
 
 /*-------------------------------------------------------------------*/
 /*!
@@ -164,7 +165,8 @@ DrawConfig::DrawConfig()
       M_debug_message_font_pen( DEBUG_MESSAGE_FONT_COLOR, 0, Qt::SolidLine ),
       M_debug_log_message_font( "Sans Serif", 8 ),
       M_debug_log_message_font_pen( DEBUG_LOG_MESSAGE_FONT_COLOR, 0, Qt::SolidLine ),
-      M_debug_shape_pen( DEBUG_SHAPE_COLOR, 1, Qt::SolidLine )
+      M_debug_shape_pen( DEBUG_SHAPE_COLOR, 1, Qt::SolidLine ),
+      M_debug_action_sequence_pen( DEBUG_ACTION_SEQUENCE_COLOR, 3, Qt::SolidLine )
 {
     //std::cerr << "create DrawConfig" << std::endl;
     readSettings();
@@ -255,6 +257,7 @@ DrawConfig::setDefaultColors()
     M_debug_message_font_pen.setColor( DEBUG_MESSAGE_FONT_COLOR );
     M_debug_log_message_font_pen.setColor( DEBUG_LOG_MESSAGE_FONT_COLOR );
     M_debug_shape_pen.setColor( DEBUG_SHAPE_COLOR );
+    M_debug_action_sequence_pen.setColor( DEBUG_ACTION_SEQUENCE_COLOR );
 }
 
 /*-------------------------------------------------------------------*/
@@ -654,6 +657,12 @@ DrawConfig::readSettings()
         M_debug_shape_pen.setColor( toColor( val.toString() ) );
     }
 
+    val = settings.value( "debug_action_sequence_color" );
+    if ( val.isValid() )
+    {
+        M_debug_action_sequence_pen.setColor( toColor( val.toString() ) );
+    }
+
     settings.endGroup();
 }
 
@@ -803,6 +812,9 @@ DrawConfig::saveSettings()
                        toString( debugLogMessageFontPen().color() ) );
     settings.setValue( "debug_shape_pen_color",
                        toString( debugShapePen().color() ) );
+
+    settings.setValue( "debug_action_sequence_color",
+                       toString( debugActionSequencePen().color() ) );
 
     settings.endGroup();
 }
