@@ -1,3 +1,11 @@
+2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/color_setting_dialog.cpp:
+	* src/qt4/debug_log_painter.cpp:
+	* src/qt4/draw_config.cpp:
+	* src/qt4/draw_config.h:
+	- 行動列を描画するペンとして単独のものを用意
+
 2013-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
